# major-project

./: .gitignore  .travis.yml  README.md  requirements.txt  test_blobs.csv  test_blobs_int.csv  test_blobs_tex.csv  test_lines.csv  test_lines_int.csv  test_lines_tex.csv  travis_requirements.txt
doc/: Makefile
doc/source/: command.rst  conf.py  index.rst  mammogram.rst  mia.features.rst  mia.reduction.rst  mia.rst  modules.rst  tests.regression_tests.rst  tests.rst  tests.unit_tests.rst
documents/final-report/: IEEEannot.bst  abstract.tex  acknowledgements.tex  cover.tex  declaration.tex  dissertation.fdb_latexmk  dissertation.fls  dissertation.tex  mmp.sty  (+3 more)
final_data/: blob-analysis.ipynb  intensity-analysis-lines.ipynb  intensity-analysis.ipynb  line-analysis.ipynb  phantom-lines.csv  real-lines.csv  synthetic_blobs.csv  synthetic_intensity_lines.csv  synthetic_texture.csv  synthetic_texture_lines.csv  texture-analysis-lines.ipynb  texture-analysis.ipynb
mapping_viz/: data.json  index.html  mapping.js
nd-viz/: index.html  style.css  test.json
notebooks/: 2015-03-25-real-and-synthetic-analysis.ipynb  Feature Analysis.ipynb  plotting.ipynb  radviz_plotting.ipynb  raw_transform.ipynb  shape_analysis.ipynb  synthetic_analysis.ipynb
results/: 2015-02-26-blob-detection.csv  2015-03-02-blob-detection.csv  2015-03-05-mapping.csv  2015-03-05-results-features.csv  2015-03-15-results-blobs.csv  2015-03-15-results-intensity.csv  synthetic_labels.csv
src/: command.py  pipeline.py  requirements.txt  setup.py
src/deformable_convolution/: CMakeLists.txt  convolve.cpp
(+138 files in other folders)
